# MailClient

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Libraries/Menu/: ItemMenu.cpp  ItemMenu.h  IteratorMenu.cpp  IteratorMenu.h  Menu.cpp  Menu.h
Libraries/MyString/: MyString.cpp  MyString.h
Models/User/: User.cpp  User.h
app/: App.cpp  App.h  CMakeLists.txt  Context.h  Intent.h
consoleMenu/: CMakeLists.txt  ConsoleMenu.cpp  ConsoleMenu.h  ItemMenu.cpp  ItemMenu.h
dbQuarry/: CMakeLists.txt  Db.cpp  Db.h  DbTransaction.cpp  DbTransaction.h  ParsingInterface.cpp  ParsingInterface.h  dbCommand.h
globals/: globalTypes.h  itemsID.h  resApp.h  rolesID.h  screensID.h  unistd.h
mail/: CMakeLists.txt  Mail.cpp  Mail.h
myString/: CMakeLists.txt  IteratorMyString.cpp  IteratorMyString.h
screens/: CMakeLists.txt  ScreenInterface.cpp  ScreenInterface.h
screens/auth/: Auth.cpp  Auth.h
screens/logo/: Logo.cpp  Logo.h
sqlite/: CMakeLists.txt
tools/: tools.cpp  tools.h
user/: CMakeLists.txt  User.cpp  User.h
